--- a/03161210.html
+++ b/03161210.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src=""></script>
 </head>
 <body>
-123
+    <p>123</p>
+    123
+    123
+    123<br/>
+    123
+    123
+    <p>123</p>
+    <p>123</p>
+    123
+    123
+<a href="http://www.baidu.com">baidu</a>
+<img src="images/logo-iconic.png">
 </body>
 </html>
