--- a/JStask2_2_1.html
+++ b/JStask2_2_1.html
@@ -37,7 +37,7 @@
             if (aqiData[i].slice(1)>60){
                 aqiList = aqiData[i];
                 citylist += '<li>'+aqiData[i]+'</li>';
-                ul.innerHTML= citylist
+                //ul.innerHTML= citylist
             }
         }
     };
