--- a/JStask2_2_1.html
+++ b/JStask2_2_1.html
@@ -25,7 +25,7 @@
     ];
 
     function city() {
-        var aqiList = new Array()
+        var aqiLisgfgt = new Array()
         var ul = document.getElementById("aqi-list")
         var citylist = ""
         /*
