--- a/JStask2_2_1.html
+++ b/JStask2_2_1.html
@@ -25,9 +25,9 @@
     ];
 
     function city() {
-        var aqiLisgfgt = new Array()
-        var ul = document.getElementById("aqi-list")
-        var citylist = ""
+        var aqiList = new Array();
+        var ul = document.getElementById("aqi-list");
+        var citylist = "";
         /*
         在注释下方编写代码
         遍历读取aqiData中各个城市的数据
@@ -37,10 +37,10 @@
             if (aqiData[i].slice(1)>60){
                 aqiList = aqiData[i];
                 citylist += '<li>'+aqiData[i]+'</li>';
-                //ul.innerHTML= citylist
+                ul.innerHTML= citylist;
             }
         }
-    };
+    }
 city()
 </script>
 </body>
