--- a/JStask2_2_1.html
+++ b/JStask2_2_1.html
@@ -29,7 +29,7 @@
         var ul = document.getElementById("aqi-list");
         var citylist = "";
         /*
-        在注释下方编写代码
+        在注释下方编写代码gfdgd
         遍历读取aqiData中各个城市的数据
         将空气质量指数大于60的城市显示到aqi-list的列表中
         */
