--- a/IFEtask1_2_1.html
+++ b/IFEtask1_2_1.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Task1_1_1</title>
+    <title>Task1_2_1</title>
+    <link href="task1_2_1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1>网站一级标题</h1>
@@ -130,11 +131,11 @@
     <p>密码请为6-16位英文数字</p>
     <br />
     性别：
-    <label for="male"><input type="radio" name="gender" value="1" id="male">男</label>
+    <label for="male"><input type="radio" name="gender" value="1" id="male" checked>男</label>
     <label for="female"><input type="radio" name="gender" value="2" id="female">女</label>
     城市：
     <select>
-        <option value="beijing" selected="selected">北京</option>
+        <option value="beijing" selected>北京</option>
         <option value="shanghai">上海</option>
     </select>
     爱好：
@@ -145,7 +146,7 @@
     <textarea placeholder="这是一个多行输入框，输入您的个人描述"></textarea>
     <input type="submit" value="确认提交" name="submit">
     <br />
-    <footer>版权所有©</footer>
+    <footer>版权所有©acheng</footer>
 
 </form>
 </body>
