--- a/IFE2017/task1/IFEtask1_1_1.html
+++ b/IFE2017/task1/IFEtask1_1_1.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Task1_2_1</title>
-    <link href="task1_2_1.css" rel="stylesheet" type="text/css">
+    <title>Task1_1_1</title>
 </head>
 <body>
 <h1>网站一级标题</h1>
@@ -21,7 +20,7 @@
 这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />
     这是一个很长很长的段落，这是一个很长很长的段落，<a href="#" title="这里有一个链接链接到http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<strong>这里有个粗体字</strong>
     这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
-<img src="images/logo-iconic.png">
+<img src="img/logo-iconic.png">
 <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />
     这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落，<a href="#" title="这里有一个链接链接到http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
 <h2>另一篇文章一级标题</h2>
@@ -32,7 +31,7 @@
     这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />
     这是一个很长很长的段落，这是一个很长很长的段落，<a href="#" title="这里有一个链接链接到http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<strong>这里有个粗体字</strong>
     这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
-<img src="images/logo-iconic.png">
+<img src="img/logo-iconic.png">
 <ul>
     <li>列表项目一</li>
     <li>列表项目二</li>
@@ -41,43 +40,43 @@
 <h2>图片</h2>
 <dl>
     <dd>好看的图片<br />
-        <img src="images/logo-iconic.png" ><br />
+        <img src="img/logo-iconic.png" ><br />
     </dd>
     <br />
     <dd>好看的图片<br />
-        <img src="images/logo-iconic.png" ><br />
+        <img src="img/logo-iconic.png" ><br />
     </dd>
     <br />
     <dd>好看的图片<br />
-        <img src="images/logo-iconic.png" ><br />
+        <img src="img/logo-iconic.png" ><br />
     </dd>
     <br />
     <dd>好看的图片<br />
-        <img src="images/logo-iconic.png" ><br />
+        <img src="img/logo-iconic.png" ><br />
     </dd>
     <br />
     <dd>好看的图片<br />
-        <img src="images/logo-iconic.png" ><br />
+        <img src="img/logo-iconic.png" ><br />
     </dd>
     <br />
     <dd>好看的图片<br />
-        <img src="images/logo-iconic.png" ><br />
+        <img src="img/logo-iconic.png" ><br />
     </dd>
     <br />
     <dd>好看的图片<br />
-        <img src="images/logo-iconic.png" ><br />
+        <img src="img/logo-iconic.png" ><br />
     </dd>
     <br />
     <dd>好看的图片<br />
-        <img src="images/logo-iconic.png" ><br />
+        <img src="img/logo-iconic.png" ><br />
     </dd>
     <br />
     <dd>好看的图片<br />
-        <img src="images/logo-iconic.png" ><br />
+        <img src="img/logo-iconic.png" ><br />
     </dd>
     <br />
     <dd>好看的图片<br />
-        <img src="images/logo-iconic.png" ><br />
+        <img src="img/logo-iconic.png" ><br />
     </dd>
     <br />
 </dl>
