--- a/IFE2017/task1/IFEtask1_2_1.html
+++ b/IFE2017/task1/IFEtask1_2_1.html
@@ -3,151 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <title>Task1_2_1</title>
-    <link href="css/task1_2_1.css" rel="stylesheet" type="text/css">
+    <link href="css/task1_2_1.css" rel="stylesheet">
 </head>
 <body>
-<h1>网站一级标题</h1>
-<ul>
-    <li><a href="#" title="导航链接一">导航链接一</a></li>
-    <li><a href="#" title="导航链接二">导航链接二</a></li>
-    <li><a href="#" title="导航链接三">导航链接三</a></li>
-    <li><a href="#" title="导航链接四">导航链接四</a></li>
-</ul>
-<h2>文章一级标题</h2>
-<h2>文章二级标题</h2>
-<p>文章作者&nbsp;文章发表时间</p>
-<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
-<br />换行了<br />
-这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />
-    这是一个很长很长的段落，这是一个很长很长的段落，<a href="#" title="这里有一个链接链接到http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<strong>这里有个粗体字</strong>
-    这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
-<img src="img/logo-iconic.png">
-<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />
-    这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落，<a href="#" title="这里有一个链接链接到http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
-<h2>另一篇文章一级标题</h2>
-<h2>文章二级标题</h2>
-<p>文章作者&nbsp;文章发表时间</p>
-<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+<header>
+    <img src="img/logo.png">
+    <ul class="nav clearfix">
+        <li><a href="#" title="导航链接一">导航链接一</a></li>
+        <li><a href="#" title="导航链接二">导航链接二</a></li>
+        <li><a href="#" title="导航链接三">导航链接三</a></li>
+        <li><a href="#" title="导航链接四">导航链接四</a></li>
+    </ul>
+</header>
+<div>
+    <h2>文章一级标题</h2>
+    <h2>文章二级标题</h2>
+    <p>文章作者&nbsp;文章发表时间</p>
+    <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
     <br />换行了<br />
     这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />
     这是一个很长很长的段落，这是一个很长很长的段落，<a href="#" title="这里有一个链接链接到http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<strong>这里有个粗体字</strong>
     这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
-<img src="img/logo-iconic.png">
-<ul>
-    <li>列表项目一</li>
-    <li>列表项目二</li>
-    <li>列表项目三</li>
-</ul>
-<h2>图片</h2>
-<dl>
-    <dd>好看的图片<br />
-        <img src="img/logo-iconic.png" ><br />
-    </dd>
-    <br />
-    <dd>好看的图片<br />
-        <img src="img/logo-iconic.png" ><br />
-    </dd>
-    <br />
-    <dd>好看的图片<br />
-        <img src="img/logo-iconic.png" ><br />
-    </dd>
-    <br />
-    <dd>好看的图片<br />
-        <img src="img/logo-iconic.png" ><br />
-    </dd>
-    <br />
-    <dd>好看的图片<br />
-        <img src="img/logo-iconic.png" ><br />
-    </dd>
-    <br />
-    <dd>好看的图片<br />
-        <img src="img/logo-iconic.png" ><br />
-    </dd>
-    <br />
-    <dd>好看的图片<br />
-        <img src="img/logo-iconic.png" ><br />
-    </dd>
-    <br />
-    <dd>好看的图片<br />
-        <img src="img/logo-iconic.png" ><br />
-    </dd>
-    <br />
-    <dd>好看的图片<br />
-        <img src="img/logo-iconic.png" ><br />
-    </dd>
-    <br />
-    <dd>好看的图片<br />
-        <img src="img/logo-iconic.png" ><br />
-    </dd>
-    <br />
-</dl>
-<h2>最后一篇文章一级标题</h2>
-<h2>文章二级标题</h2>
-<p>文章作者&nbsp;文章发表时间</p>
-<ol>
-    <li>排名1</li>
-    <li>排名2</li>
-    <li>排名3</li>
-</ol>
-<p>下面是一个表格，给表格加了一个border=“1”好让你看出是一个表格</p>
-<table border="1">
-    <tr>
-        <th>表头</th>
-        <th>表头</th>
-        <th>表头</th>
-    </tr>
-    <tr>
-        <td>表内容单元格</td>
-        <td>表内容单元格</td>
-        <td><a href="#" title="操作">操作</a></td>
-    </tr>
-    <tr>
-        <td>表内容单元格</td>
-        <td>表内容单元格</td>
-        <td><a href="#" title="操作">操作</a></td>
-    </tr>
-    <tr>
-        <td>表内容单元格</td>
-        <td>表内容单元格</td>
-        <td><a href="#" title="操作">操作</a></td>
-    </tr>
-    <tr>
-        <td>表内容单元格</td>
-        <td>表内容单元格</td>
-        <td><a href="#" title="操作">操作</a></td>
-    </tr>
-    <tr>
-        <td>总计</td>
-        <td colspan="2">1000</td>
-    </tr>
-</table>
-<form method="post" action="save.php">
-    <h2>这里以后是一个侧栏，这是侧栏的标题</h2>
-    <h2>侧栏注册窗口标题</h2>
-    <label for="email">请输入邮箱地址：<input type="text" name="myName" placeholder="这是一个文本输入框" id="email"></label>
-    <p>邮箱地址请按要求格式输入</p>
-    <label for="password">请输入密码：<input type="password" name="myPassword" placeholder="这是一个密码输入框" id="password"></label>
-    <label for="confirm">请重复输入密码：<input type="password" name="myConfirmPassword" placeholder="这是一个密码输入框" id="confirm"></label>
-    <p>密码请为6-16位英文数字</p>
-    <br />
-    性别：
-    <label for="male"><input type="radio" name="gender" value="1" id="male" checked>男</label>
-    <label for="female"><input type="radio" name="gender" value="2" id="female">女</label>
-    城市：
-    <select>
-        <option value="beijing" selected>北京</option>
-        <option value="shanghai">上海</option>
-    </select>
-    爱好：
-    <label for="sports"><input type="checkbox" name="hobby" value="1" id="sports">运动</label>
-    <label for="arts"><input type="checkbox" name="hobby" value="2" id="arts">艺术</label>
-    <label for="science"><input type="checkbox" name="hobby" value="3" id="science">科学</label>
-    个人描述：
-    <textarea placeholder="这是一个多行输入框，输入您的个人描述"></textarea>
-    <input type="submit" value="确认提交" name="submit">
-    <br />
+    <img src="img/logo-iconic.png">
+    <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />
+    这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落，<a href="#" title="这里有一个链接链接到http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
+</div>
+<div>
+    <h2>另一篇文章一级标题</h2>
+    <h2>文章二级标题</h2>
+    <p>文章作者&nbsp;文章发表时间</p>
+    <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+    <br />换行了<br />
+    这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />
+    这是一个很长很长的段落，这是一个很长很长的段落，<a href="#" title="这里有一个链接链接到http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<strong>这里有个粗体字</strong>
+    这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
+    <img src="img/logo-iconic.png">
+    <ul>
+        <li>列表项目一</li>
+        <li>列表项目二</li>
+        <li>列表项目三</li>
+    </ul>
+</div>
+<div>
+    <h2>图片</h2>
+    <dl>
+        <dd>好看的图片<br />
+            <img src="img/logo-iconic.png" ><br />
+        </dd>
+        <br />
+        <dd>好看的图片<br />
+            <img src="img/logo-iconic.png" ><br />
+        </dd>
+        <br />
+        <dd>好看的图片<br />
+            <img src="img/logo-iconic.png" ><br />
+        </dd>
+        <br />
+        <dd>好看的图片<br />
+            <img src="img/logo-iconic.png" ><br />
+        </dd>
+        <br />
+        <dd>好看的图片<br />
+            <img src="img/logo-iconic.png" ><br />
+        </dd>
+        <br />
+        <dd>好看的图片<br />
+            <img src="img/logo-iconic.png" ><br />
+        </dd>
+        <br />
+        <dd>好看的图片<br />
+            <img src="img/logo-iconic.png" ><br />
+        </dd>
+        <br />
+        <dd>好看的图片<br />
+            <img src="img/logo-iconic.png" ><br />
+        </dd>
+        <br />
+        <dd>好看的图片<br />
+            <img src="img/logo-iconic.png" ><br />
+        </dd>
+        <br />
+        <dd>好看的图片<br />
+            <img src="img/logo-iconic.png" ><br />
+        </dd>
+        <br />
+    </dl>
+</div>
+<div>
+    <h2>最后一篇文章一级标题</h2>
+    <h2>文章二级标题</h2>
+    <p>文章作者&nbsp;文章发表时间</p>
+    <ol>
+        <li>排名1</li>
+        <li>排名2</li>
+        <li>排名3</li>
+    </ol>
+    <p>下面是一个表格，给表格加了一个border=“1”好让你看出是一个表格</p>
+    <table border="1">
+        <tr>
+            <th>表头</th>
+            <th>表头</th>
+            <th>表头</th>
+        </tr>
+        <tr>
+            <td>表内容单元格</td>
+            <td>表内容单元格</td>
+            <td><a href="#" title="操作">操作</a></td>
+        </tr>
+        <tr>
+            <td>表内容单元格</td>
+            <td>表内容单元格</td>
+            <td><a href="#" title="操作">操作</a></td>
+        </tr>
+        <tr>
+            <td>表内容单元格</td>
+            <td>表内容单元格</td>
+            <td><a href="#" title="操作">操作</a></td>
+        </tr>
+        <tr>
+            <td>表内容单元格</td>
+            <td>表内容单元格</td>
+            <td><a href="#" title="操作">操作</a></td>
+        </tr>
+        <tr>
+            <td>总计</td>
+            <td colspan="2">1000</td>
+        </tr>
+    </table>
+</div>
+<div>
+    <form method="post" action="save.php">
+        <h2>这里以后是一个侧栏，这是侧栏的标题</h2>
+        <h2>侧栏注册窗口标题</h2>
+        <label for="email">请输入邮箱地址：<input type="text" name="myName" placeholder="这是一个文本输入框" id="email"></label>
+        <p>邮箱地址请按要求格式输入</p>
+        <label for="password">请输入密码：<input type="password" name="myPassword" placeholder="这是一个密码输入框" id="password"></label>
+        <label for="confirm">请重复输入密码：<input type="password" name="myConfirmPassword" placeholder="这是一个密码输入框" id="confirm"></label>
+        <p>密码请为6-16位英文数字</p>
+        <br />
+        性别：
+        <label for="male"><input type="radio" name="gender" value="1" id="male" checked>男</label>
+        <label for="female"><input type="radio" name="gender" value="2" id="female">女</label>
+        城市：
+        <select>
+            <option value="beijing" selected>北京</option>
+            <option value="shanghai">上海</option>
+        </select>
+        爱好：
+        <label for="sports"><input type="checkbox" name="hobby" value="1" id="sports">运动</label>
+        <label for="arts"><input type="checkbox" name="hobby" value="2" id="arts">艺术</label>
+        <label for="science"><input type="checkbox" name="hobby" value="3" id="science">科学</label>
+        个人描述：
+        <textarea placeholder="这是一个多行输入框，输入您的个人描述"></textarea>
+        <input type="submit" value="确认提交" name="submit">
+        <br />
+    </form>
+</div>
+<div>
     <footer>版权所有©acheng</footer>
-
-</form>
+</div>
 </body>
 </html>
