--- a/IFE2017/task1/IFEtask1_2_1.html
+++ b/IFE2017/task1/IFEtask1_2_1.html
@@ -8,11 +8,11 @@
 <body>
 <header>
     <img src="img/logo.png">
-    <ul class="nav clearfix">
-        <li><a href="#" title="导航链接一">导航链接一</a></li>
-        <li><a href="#" title="导航链接二">导航链接二</a></li>
-        <li><a href="#" title="导航链接三">导航链接三</a></li>
+    <ul class="nav">
         <li><a href="#" title="导航链接四">导航链接四</a></li>
+        <li><a href="#" title="导航链接三">导航链接三</a></li>
+        <li><a href="#" title="导航链接二">导航链接二</a></li>
+        <li><a href="#" title="导航链接一">导航链接一</a></li>
     </ul>
 </header>
 <div>
