--- a/IFE2017/task1/IFEtask1_2_1.html
+++ b/IFE2017/task1/IFEtask1_2_1.html
@@ -15,10 +15,10 @@
         <li><a href="#" title="导航链接一">导航链接一</a></li>
     </ul>
 </header>
-<div>
+<div class="">
     <h2>文章一级标题</h2>
     <h2>文章二级标题</h2>
-    <p>文章作者&nbsp;文章发表时间</p>
+    <p>文章作者 文章发表时间</p>
     <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
     <br />换行了<br />
     这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />
