--- a/IFE2017/task1/IFEtask1_3_1.html
+++ b/IFE2017/task1/IFEtask1_3_1.html
@@ -6,6 +6,25 @@
     <link href="css/IFEtask1_3_1.css" rel="stylesheet">
 </head>
 <body>
-
+<div class="main">
+    <div class="left">
+        <img src="img/task3.jpg">
+        <p>团队名称</p>
+    </div>
+    <div class="right">
+        <img src="img/task3.jpg">
+        <img src="img/task3.jpg">
+        <img src="img/task3.jpg">
+        <img src="img/task3.jpg">
+    </div>
+    <div class="middle">
+        <h3>关于你们团队的介绍。</h3>
+        <p>可以给我们解释一下团队名称的来历，或是分别介绍你们的团队成员。</p>
+        <p>（以下为示例）</p>
+        <p>百度WEB前段技术学院(Baidu Institute of Front-End Technology简称IFE)是一个由百度人力组员部校园招聘组、百度EFE团队联合出品的、面向在校大学生一级对前段技术有兴趣的前段在线学习平台百度WEB前段技术学院(Baidu Institute of Front-End Technology简称IFE)是一个由百度人力组员部校园招聘组、百度EFE团队联合出品的、面向在校大学生一级对前段技术有兴趣的前段在线学习平台百度WEB前段技术学院(Baidu Institute of Front-End Technology简称IFE)是一个由百度人力组员部校园招聘组、百度EFE团队联合出品的、面向在校大学生一级对前段技术有兴趣的前段在线学习平台</p>
+        <h3>2016春季班概述</h3>
+        <p>百度WEB前段技术学院(Baidu Institute of Front-End Technology简称IFE)是一个由百度人力组员部校园招聘组、百度EFE团队联合出品的、面向在校大学生一级对前段技术有兴趣的前段在线学习平台百度WEB前段技术学院(Baidu Institute of Front-End Technology简称IFE)是一个由百度人力组员部校园招聘组、百度EFE团队联合出品的、面向在校大学生一级对前段技术有兴趣的前段在线学习平台百度WEB前段技术学院(Baidu Institute of Front-End Technology简称IFE)是一个由百度人力组员部校园招聘组、百度EFE团队联合出品的、面向在校大学生一级对前段技术有兴趣的前段在线学习平台百度WEB前段技术学院(Baidu Institute of Front-End Technology简称IFE)是一个由百度人力组员部校园招聘组、百度EFE团队联合出品的、面向在校大学生一级对前段技术有兴趣的前段在线学习平台百度WEB前段技术学院(Baidu Institute of Front-End Technology简称IFE)是一个由百度人力组员部校园招聘组、百度EFE团队联合出品的、面向在校大学生一级对前段技术有兴趣的前段在线学习平台</p>
+    </div>
+</div>
 </body>
 </html>
