--- a/IFE2017/task1/IFEtask1_4_1.html
+++ b/IFE2017/task1/IFEtask1_4_1.html
@@ -6,12 +6,9 @@
     <link rel="stylesheet" href="css/task1_4_1.css">
 </head>
 <body>
-<!--<div class="main">-->
-    <!--<div class="left"></div>-->
-    <!--<div class="right"></div>-->
-<!--</div>-->
-<div>
-    sdfsafsajdfkjasfksajfitrdsfkjfkdsjgjsdfjgrietjgdkfjgdksgjdskgjkf
+<div class="main">
+    <div class="left"></div>
+    <div class="right"></div>
 </div>
 </body>
 </html>
